# narcissistic-twitter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  data_processing.ipynb  eval_lightning.py  exploratory_data_analysis.ipynb  pyproject.toml  requirements.txt  train.py  train_lightning.py
.hooks/: strip_notebooks.sh
configs/: eval.yaml  train.yaml
configs/data/: narcissistic_posts.yaml  narcissistic_posts_lightning.yaml  narcissistic_posts_simple.yaml
configs/evaluation/: default.yaml
configs/experiment/: baseline.yaml  bert.yaml  bert_slow.yaml  few_shot_casual_conversation.yaml  few_shot_focused_interaction.yaml
configs/hparams_search/: bert_optuna.yaml  bert_optuna_2.yaml
configs/logger/: neptune.yaml
configs/model/: bert.yaml  few_shot.yaml
configs/paths/: default.yaml
data/: processed_data.csv  processed_data_validate.csv  teach AI 12.12.23.csv  variables description.csv
data/processed/: processed_data.csv  processed_new_data.csv
data/raw/: human_as_model_abortion_A.csv  human_as_model_abortion_B.csv  human_as_model_abortion_C.csv  human_as_model_travel.csv  human_as_model_travel_A.csv  human_as_model_travel_B.csv  human_as_model_travel_C.csv  teach AI 12.12.23.sav  teach AI 26.08.24.sav
data/responses/: few_shot.csv  human_as_model_abortion_A.csv  human_as_model_abortion_B.csv  human_as_model_abortion_C.csv  human_as_model_ai_A.csv  human_as_model_ai_B.csv  human_as_model_travel_A.csv  human_as_model_travel_B.csv  human_as_model_travel_C.csv
data/split/: full_test.csv  full_train.csv  full_validate.csv  human_test_ai.csv  human_train_ai.csv  test.csv  train.csv  validate.csv  validate_data.csv
lib/: utils.py
lib/data/: datamodule.py  dataset.py
lib/datamodule/: datamodule.py  dataset.py
lib/datamodules/: datamodule.py
lib/google_api/: drive.py  file_on_google_drive.py  sheets.py
lib/jupyter_notebook_utils/: sheet_creation_utils.py  tweet.py
lib/models/: abstract_base.py  baseline_models.py  bert.py  few_shot.py  (+1 more)
notebooks/: baseline_model.ipynb  create_bins_learn_to_rank.ipynb  data_processing.ipynb  emotion_recognition.ipynb  exploratory_data_analysis.ipynb  few_shot_test.ipynb  few_shot_test_RAG_crewai.ipynb  human_as_model_analysis_abortion.ipynb  human_as_model_analysis_travel.ipynb  sentiment_recognition.ipynb  statistical_baseline.ipynb  twitter_test.ipynb  vizualization_of_embeddings.ipynb
scripts/: data_for_human_as_model_ai.py  generate_emotion_data.py  raw_data_processing.py  split_dataset.py  twitter_recent_search.py
(+46 files in other folders)
