[tool.ruff]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "W", # 
]

exclude = [
    # excluding by default
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",

    # our own exclusions
    "notebooks",
    "venv",
]

ignore = ["E402"]
line-length = 120

[tool.isort]
skip = [
    "notebooks",
    "venv",
    ".venv",
]

# Sort imports alphabetically
force_sort_within_sections=true
lexicographical=true
single_line_exclusions=['typing']
order_by_type=false
group_by_package=true

# Make it compatible with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Set the line length
line_length=120

[tool.black]
line-length = 120

# force-exclude for the pre-commit hook
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
  | notebooks/stripped
  | data
  | .venv
)/
'''


[tool.pytest]
tmp_path_retention_policy = 'none'

[tool.pytest.ini_options]
markers = [
  "long"
]

[tool.poetry]
name = "narcissistic-twitter"
version = "0.1.0"
description = ""
authors = ["Jan Piotrowski <janfpiotrowski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pandas = "^2.2.0"
tqdm = "^4.66.2"
spacy = "^3.7.4"
ipython = "^8.22.1"
numpy = "^1.26.4"
nltk = "^3.8.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
scikit-learn = "^1.4.1.post1"
pyreadstat = "^1.2.6"
torch = "^2.2.1"
lightning = "^2.2.1"
transformers = "^4.38.2"
hydra-core = "^1.3.2"
rich = "^13.7.1"
hydra-colorlog = "^1.2.0"
neptune = "^1.9.1"
langchain-core = "^0.1.32"
langchain-community = "^0.0.28"
langchain-openai = "^0.0.8"
ipykernel = "^6.29.3"
pyarrow = "^15.0.2"
python-dotenv = "^1.0.1"
hydra-optuna-sweeper = "^1.2.0"
sqlalchemy = "1.4.46"
langchain-chroma = "^0.1.0"
rootutils = "^1.0.7"
requests = "^2.32.3"
tweepy = "^4.14.0"
colorama = "^0.4.6"
umap-learn = "^0.5.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
